src/test/ui/match/match-tag-nullary.stderr
error[E0308]: mismatched types
  --> $DIR/match-tag-nullary.rs:4:40
   |
LL | fn main() { let x: A = A::A; match x { B::B => { } } }
   |                                        ^^^^ expected enum `A`, found enum `B`
   |
   = note: expected type `A`
              found type `B`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0308`.
